7. komit kao drugi korisnik

--- a/README
+++ b/README
@@ -6,3 +6,5 @@ Hello TrajDali, this is commit 4.
 And this is already commit 5.
 
 2012-02-19 Dodajem commit 6.
+
+2012-02-19 Dodajem commit 7 kao drugi korisnik (martintest).
