--- a/README
+++ b/README
@@ -13,3 +13,5 @@ OVO DODAVANJE NIJE USPELO (DODATO JE KAO MARTINMAGNIFICENT A NE KAO MARTINTEST).
 2012-09-10 Dodajem commit 8 kao drugi korisnik (martintest).
 Sada sam promenio konfituracione parametre Gita tako da se identifikuje kao drugi user.
 Sada je username za github martintest. Ajde da probamo.
+
+2012-09-10 Dodajem commit 9, testiram lokalni config fajl (u folderu .git).
