--- a/README
+++ b/README
@@ -17,3 +17,5 @@ Sada je username za github martintest. Ajde da probamo.
 2012-02-19 Dodajem commit 9, testiram lokalni config fajl (u folderu .git).
 
 2012-02-19 Dodajem commit 10, sada sa svog naloga martinmagnificent.
+
+martintest commit 1
